Bug 501154, consolidate places where clipboard events are fired from, r=smaug,sr=neil