content/base/public/nsCopySupport.h
@@ -48,6 +48,7 @@ class nsITransferable;
 class nsACString;
 class nsAString;
 class nsIDOMNode;
+class nsIPresShell;
 
 class nsCopySupport
 {
@@ -66,16 +67,51 @@ class nsCopySupport
     static nsresult ImageCopy(nsIImageLoadingContent* aImageElement,
                               PRInt32 aCopyFlags);
 
-    // Given the current selection, find the target that
-    // before[copy,cut,paste] and [copy,cut,paste] events will fire on.
-    static nsresult GetClipboardEventTarget(nsISelection *aSel,
-                                            nsIDOMNode **aEventTarget);
-
     // Get the selection as a transferable. Similar to HTMLCopy except does
     // not deal with the clipboard.
     static nsresult GetTransferableForSelection(nsISelection * aSelection,
                                                 nsIDocument * aDocument,
                                                 nsITransferable ** aTransferable);
+
+    /**
+     * Retrieve the selection for the given document. If the current focus
+     * within the document has its own selection, aSelection will be set to it
+     * and this focused content node returned. Otherwise, aSelection will be
+     * set to the document's selection and null will be returned.
+     */
+    static nsIContent* GetSelectionForCopy(nsIDocument* aDocument,
+                                           nsISelection** aSelection);
+
+    /**
+     * Returns true if a copy operation is currently permitted based on the
+     * current focus and selection within the specified document.
+     */
+    static PRBool CanCopy(nsIDocument* aDocument);
+
+    /**
+     * Fires a cut, copy or paste event, on the given presshell, depending
+     * on the value of aType, which should be either NS_CUT, NS_COPY or
+     * NS_PASTE, and perform the default copy action if the event was not
+     * cancelled.
+     *
+     * If aSelection is specified, then this selection is used as the target
+     * of the operation. Otherwise, GetSelectionForCopy is used to retrieve
+     * the current selection.
+     *
+     * This will fire a cut, copy or paste event at the node at the start
+     * point of the selection. If a cut or copy event is not cancelled, the
+     * selection is copied to the clipboard and true is returned. Paste events
+     * have no default behaviour but true will be returned. It is expected
+     * that the caller will execute any needed default paste behaviour. Also,
+     * note that this method only copies text to the clipboard, the caller is
+     * responsible for removing the content during a cut operation if true is
+     * returned.
+     *
+     * If the event is cancelled or an error occurs, false will be returned.
+     */
+    static PRBool FireClipboardEvent(PRInt32 aType,
+                                     nsIPresShell* aPresShell,
+                                     nsISelection* aSelection);
 };
 
 #endif
